--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         buildConfigField("String", "KEY", '"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"')
+        buildConfigField("String", "BASE_URL", '"https://api.github.com"')
     }
 
     buildFeatures{
