--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,13 @@
         android:theme="@style/Theme.GithubUsers"
         tools:targetApi="31">
         <activity
-            android:name=".theme.ChangeNameActivity"
+            android:name=".theme.ChangeThemeActivity"
             android:exported="false" />
         <activity
-            android:name=".DetailUserActivity"
+            android:name=".detail.DetailUserActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
