--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.GithubUsers"
         tools:targetApi="31">
         <activity
+            android:name=".favorite.FavoriteActivity"
+            android:exported="false" />
+        <activity
             android:name=".theme.ChangeThemeActivity"
             android:exported="false" />
         <activity
